# lalipo

./: .env.skeleton  .gitattributes  .gitignore  .projectile  CLAUDE.md  README.md  gen_playlist.py  manage.py  pyproject.toml
assets/systemd/: lalipo.service  lalipo.socket
gen_playlist/: apps.py  forms.py  views.py
gen_playlist/templates/: gen_playlist.html
lalipo/: apps.py  asgi.py  logic.py  settings.py  setup_project.py  signals.py  spotify_helpers.py  spotipy_cache.py  urls.py  views.py  wsgi.py
static/: style.css
static/bulma/css/: style.css  style.css.map
static/bulma/sass/: package-lock.json  package.json  style.sass  style.scss
templates/: base_generic.html  gen_playlist.html  playlist_input.html  preview_playlist.html
templates/account/: base.html  logout.html
templates/allauth/layouts/: base.html
templates/bulma/: base.html
templates/socialaccount/: login.html
