[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "django>=4.2.6",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "django-allauth>=0.57.0",
    "django-extensions>=3.2.3",
    "django-bulma>=0.8.3",
    "setuptools>=68.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL"}

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.16.1",
]
