[project]
name = "lalipo"
version = "0.1"
description = "Spotify playlist generator"
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "django>=4.2.6",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "django-allauth>=0.57.0",
    "django-extensions>=3.2.3",
    "django-bulma>=0.8.3",
    "setuptools>=68.2.2",
    "pydantic>=2.4.2",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL"}

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.16.1",
]

[tool.pdm.scripts]
manage.cmd = "./manage.py"
gunicorn.cmd = "gunicorn lalipo.wsgi:application"